--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-    "name": "clipcc-extension-editmr-AWP",
+    "name": "clipcc-extension-em-awp",
     "version": "1.0.0",
-    "author": "Edit Mr. & Skyhigh173",
+    "author": "Edit Mr.",
     "scripts": {
         "build": "rimraf ./build && mkdirp build && rimraf ./dist && mkdirp dist && webpack --bail",
         "build:dist": "NODE_ENV=production npm run build"
     },
     "dependencies": {
         "clipcc-extension": "^0.2.0"
+    },
+    "devDependencies": {
+        "copy-webpack-plugin": "^11.0.0",
+        "mkdirp": "^1.0.4",
+        "rimraf": "^3.0.2",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
+        "zip-webpack-plugin": "^4.0.1"
     }
 }
